avance en el model y el controller del proyecto para la validación de campos

--- a/view/bag.html
+++ b/view/bag.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<link rel="icon" href="img/herramientas_1.png">
-	<title>Restaurant</title>
+	<link rel="icon" href="img/logo-icono.png">
+	<title>Carrito de Compras</title>
 
 	<!-- Normalize V8.0.1 -->
 	<link rel="stylesheet" href="./css/normalize.css">
@@ -27,27 +27,21 @@
 	<!-- Header -->
 	<header class="header full-box bg-white">
 	    <div class="header-brand full-box">
-	        <a href="index.html">
-	            <img src="./img/herramientas_1.png" alt="Designlopers" class="img-fluid">
+	        <a href="index_user.html">
+	            <img src="./img/logo-escoinfer.png" alt="Designlopers" class="img-fluid">
 	        </a>
 	    </div>
 	    <div class="header-options full-box">
 	        <nav class="header-navbar full-box poppins-regular font-weight-bold scroll" onclick="show_menu_mobile()" >
 	            <ul class="list-unstyled full-box" >
 					<li>
-						<a id="name">Ferreteria Escoinfer Escobillas</a>
+						<a>Ferreteria Escoinfer Escobillas</a>
 					</li>
-					<li>
-	                    <a href="index.html" >Inicio</a>
+	                <li>
+	                    <a id="inicio" href="index_user.html" >Inicio</a>
 	                </li>
 	                <li>
 	                    <a href="menu.html" >Productos</a>
-	                </li>
-	                <li>
-	                    <a href="registration.html" >Regístrate</a>
-	                </li>
-	                <li>
-	                    <a href="signin.html" >Ingresar</a>
 	                </li>
 	            </ul>
 	        </nav>
