--- a/view/details.html
+++ b/view/details.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<link rel="icon" href="assets/img/herramientas_1.png">
-	<title>Restaurant</title>
+	<link rel="icon" href="img/logo-icono.png">
+	<title>Detalles del Producto</title>
 
 	<!-- Normalize V8.0.1 -->
 	<link rel="stylesheet" href="./css/normalize.css">
@@ -27,8 +27,8 @@
 	<!-- Header -->
 	<header class="header full-box bg-white">
 	    <div class="header-brand full-box">
-	        <a href="index.html">
-	            <img src="./assets/img/herramientas_1.png" alt="Designlopers" class="img-fluid">
+	        <a href="index_user.html">
+	            <img src="img/logo-escoinfer.png" alt="Designlopers" class="img-fluid">
 	        </a>
 	    </div>
 	    <div class="header-options full-box">
@@ -37,17 +37,11 @@
 	                <li>
 						<a>Ferreteria Escoinfer Escobillas</a>
 					</li>
-					<li>
-	                    <a href="../index.html" >Inicio</a>
+	                <li>
+	                    <a id="inicio" href="index_user.html" >Inicio</a>
 	                </li>
 	                <li>
 	                    <a href="menu.html" >Productos</a>
-	                </li>
-	                <li>
-	                    <a href="registration.html" >Regístrate</a>
-	                </li>
-	                <li>
-	                    <a href="signin.html" >Ingresar</a>
 	                </li>
 	            </ul>
 	        </nav>
@@ -88,7 +82,7 @@
 	            <div class="col-12 col-lg-5">
 	                <!--cover-->
 	                <figure class="full-box">
-	                    <img class="img-fluid" src="./assets/img/herramientas_1.png" alt="platillo_">
+	                    <img class="img-fluid" src="img/herramientas_1.png" alt="platillo_">
 	                </figure>
 
 	                <!-- Galery -->
@@ -98,21 +92,21 @@
 
 	                    <!--cover-->
 	                    <figure class="full-box">
-	                        <a data-fslightbox="gallery" href="./assets/img/Martillo.jpg">
-	                            <img class="img-fluid" src="./assets/img/Martillo.jpg" alt="platillo_">
+	                        <a data-fslightbox="gallery" href="img/Martillo.jpg">
+	                            <img class="img-fluid" src="img/Martillo.jpg" alt="">
 	                        </a>
 	                    </figure>
 
 	                    <!--otras-->
 	                    <figure class="full-box">
-	                        <a data-fslightbox="gallery" href="./assets/img/taladro inalambrico.jpg">
-	                            <img class="img-fluid" src="./assets/img/taladro inalambrico.jpg" alt="platillo_">
+	                        <a data-fslightbox="gallery" href="img/taladro inalambrico.jpg">
+	                            <img class="img-fluid" src="img/taladro inalambrico.jpg" alt="">
 	                        </a>
 	                    </figure>
 
 	                    <figure class="full-box">
-	                        <a data-fslightbox="gallery" href="./assets/img/Taladro Demoledor.png">
-	                            <img class="img-fluid" src="./assets/img/Taladro Demoledor.png" alt="platillo_">
+	                        <a data-fslightbox="gallery" href="img/Taladro Demoledor.png">
+	                            <img class="img-fluid" src="img/Taladro Demoledor.png" alt="">
 	                        </a>
 	                    </figure>
 
