--- a/view/index_user.html
+++ b/view/index_user.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<link rel="icon" href="img/herramientas_1.png">
+	<link rel="icon" href="img/logo-icono.png">
 	<title>Ferreteria E . E</title>
 
 	<!-- Normalize V8.0.1 -->
@@ -28,26 +28,20 @@
 	<header class="header full-box bg-white">
 	    <div class="header-brand full-box">
 	        <a href="index_user.html">
-	            <img src="img/herramientas_1.png" alt="Designlopers" class="img-fluid">
+	            <img src="img/logo-escoinfer.png" alt="Designlopers" class="img-fluid">
 	        </a>
 	    </div>
 	    <div class="header-options full-box">
 	        <nav class="header-navbar full-box poppins-regular font-weight-bold scroll" onclick="show_menu_mobile()" >
 				<ul class="list-unstyled full-box" >
 					<li>
-						<a id="name">Ferreteria Escoinfer Escobillas</a>
+						<a>Bienvenido Cliente</a>
 					</li>
 	                <li>
 	                    <a id="inicio" href="index_user.html" >Inicio</a>
 	                </li>
 	                <li>
 	                    <a href="menu.html" >Productos</a>
-	                </li>
-	                <li>
-	                    <a href="registration.html" >Regístrate</a>
-	                </li>
-	                <li>
-	                    <a href="signin.html" >Ingresa</a>
 	                </li>
 	            </ul>
 	        </nav>
@@ -199,6 +193,7 @@
 
 	<hr>
 
+	<!--
 	<div class="container container-web-page">
 	    <div class="row justify-content-md-center">
 	        <div class="col-12 col-md-6">
@@ -217,7 +212,7 @@
 	            </p>
 	        </div>
 	    </div>
-	</div>
+	</div>-->
 
 	<!-- Footer -->
 	<footer class="footer">
