--- a/view/menu.html
+++ b/view/menu.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<link rel="icon" href="img/herramientas_1.png">
+	<link rel="icon" href="img/logo-icono.png">
 	<title>Productos</title>
 
 	<!-- Normalize V8.0.1 -->
@@ -28,7 +28,7 @@
 	<header class="header full-box bg-white">
 	    <div class="header-brand full-box">
 	        <a href="index_user.html">
-	            <img src="img/herramientas_1.png" alt="Designlopers" class="img-fluid">
+	            <img src="img/logo-escoinfer.png" alt="Designlopers" class="img-fluid">
 	        </a>
 	    </div>
 	    <div class="header-options full-box">
@@ -38,16 +38,10 @@
 						<a>Ferreteria Escoinfer Escobillas</a>
 					</li>
 	                <li>
-	                    <a href="index_user.html" >Inicio</a>
+	                    <a id="inicio" href="index_user.html" >Inicio</a>
 	                </li>
 	                <li>
 	                    <a href="menu.html" >Productos</a>
-	                </li>
-	                <li>
-	                    <a href="registration.html" >Regístrate</a>
-	                </li>
-	                <li>
-	                    <a href="signin.html" >Ingresa</a>
 	                </li>
 	            </ul>
 	        </nav>
