--- a/view/registration.html
+++ b/view/registration.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<link rel="icon" href="img/herramientas_1.png">
+	<link rel="icon" href="img/logo-icono.png">
 	<title>Registro</title>
 
 	<!-- Normalize V8.0.1 -->
@@ -27,8 +27,8 @@
 	<!-- Header -->
 	<header class="header full-box bg-white">
 		<div class="header-brand full-box">
-	        <a href="index_user.html">
-	            <img src="img/herramientas_1.png" alt="Designlopers" class="img-fluid">
+	        <a href="../index.php">
+	            <img src="img/logo-escoinfer.png" alt="Designlopers" class="img-fluid">
 	        </a>
 	    </div>
 	    <div class="header-options full-box">
@@ -38,27 +38,13 @@
 						<a>Ferreteria Escoinfer Escobillas</a>
 					</li>
 					<li>
-	                    <a href="index_user.html" >Inicio</a>
-	                </li>
+						<a>[Cree su cuenta personal]</a>
+					</li>
 	                <li>
-	                    <a href="menu.html" >Productos</a>
-	                </li>
-	                <li>
-	                    <a href="registration.html" >Regístrate</a>
-	                </li>
-	                <li>
-	                    <a href="signin.html" >Ingresar</a>
+	                    <a id="inicio" href="../index.php" >Inicio</a>
 	                </li>
 	            </ul>
 	        </nav>
-	        <a href="bag.html" class="header-button full-box text-center" title="Carrito" >
-	            <i class="fas fa-shopping-bag"></i>
-	            <span class="badge bg-primary rounded-pill bag-count" >2</span>
-	        </a>
-
-	        <div class="header-button full-box text-center" id="userMenu" data-mdb-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="Nombre de usuario" >
-	            <i class="fas fa-user-circle"></i>
-	        </div>
 	        <div class="dropdown-menu div-bordered popup-login" aria-labelledby="userMenu">
 	            <p class="text-center" style="padding-top: 10px;">
 	                <i class="fas fa-user-circle fa-3x"></i><br>
