--- a/view/css/style.css
+++ b/view/css/style.css
@@ -46,7 +46,10 @@
 	--border-color: #D8D8D8;
 	--cafe: #947F57;
 	--grisoscuro: #3D3D3D;
-	--grisclaro: #E8E8E8;
+	--grisclaro: #a3a3a3;
+	--naranja: #ff8717;
+	--naranjaoscuro: #944700;
+	--naranjaclaro: #8f511f;
 	
 	--header-height: 60px;
 }
@@ -56,7 +59,7 @@ body,html{
 	width: 100%;
 	height: 100%;
 	background-color: var(--grisclaro);
-	color: var(--bs-black);
+	color: black;
 	font-size: 16px;
 }
 #inicio{
@@ -64,6 +67,11 @@ body,html{
 }
 .row{
 	justify-content: center;
+}
+
+#name{
+	display: flex;
+	justify-content: flex-start;
 }
 
 .full-box{
@@ -101,7 +109,7 @@ body,html{
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
-	background-color: var(--cafe);
+	background-color: var(--grisoscuro);
 }
 .header{
 	border-bottom: 1px solid rgba(0, 0, 0, .1);
@@ -110,17 +118,17 @@ body,html{
 	display: flex;
 }
 .header-brand{
-	width: 25%;
+	width: 40%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: var(--grisoscuro);
+	background-color: var(--naranja);
 }
 .header-brand img{
-	max-width: calc(var(--header-height) - 8px);
+	max-width: calc(var(--header-height) + 15rem);
 }
 .header-options{
-	width: 75%;
+	width: 60%;
 	padding-right: 25px;
 	display: flex;
 	align-items: center;
@@ -236,30 +244,22 @@ body,html{
 }
 @keyframes banner{
 	0%{
-		background-image: url('../img/Logo\ para\ la\ ferretería\ Escoinfer\ Escobillas.png');
-	}
-	12.5%{
-		background-image: url('../img/Logo\ para\ la\ ferretería\ Escoinfer\ Escobillas.png');
-	}
-
-
-	25%{
 		background-image: url('../img/carrusel\ imagen\ 1.jpg');
 	}
-	37.5%{
+	20%{
 		background-image: url('../img/carrusel\ imagen\ 1.jpg');
 	}
 
 
-	50%{
+	40%{
 		background-image: url('../img/carrusel\ imagen\ 3.jpg');
 	}
-	62.5%{
+	60%{
 		background-image: url('../img/carrusel\ imagen\ 3.jpg');
 	}
 
 	
-	75%{
+	80%{
 		background-image: url('../img/carrusel\ imagen\ 4.jpg');
 	}
 	100%{
