--- a/view/menu.html
+++ b/view/menu.html
@@ -27,7 +27,7 @@
 	<!-- Header -->
 	<header class="header full-box bg-white">
 	    <div class="header-brand full-box">
-	        <a href="index_user.html">
+	        <a href="index_user.php">
 	            <img src="img/logo-escoinfer.png" alt="Designlopers" class="img-fluid">
 	        </a>
 	    </div>
@@ -38,7 +38,7 @@
 						<a>Ferreteria Escoinfer Escobillas</a>
 					</li>
 	                <li>
-	                    <a id="inicio" href="index_user.html" >Inicio</a>
+	                    <a id="inicio" href="index_user.php" >Inicio</a>
 	                </li>
 	                <li>
 	                    <a href="menu.html" >Productos</a>
