--- a/view/signin.html
+++ b/view/signin.html
@@ -27,7 +27,7 @@
 	<!-- Header -->
 	<header class="header full-box bg-white">
 	    <div class="header-brand full-box">
-	        <a href="index_user.html">
+	        <a href="index_user.php">
 	            <img src="img/logo-escoinfer.png" alt="Designlopers" class="img-fluid">
 	        </a>
 	    </div>
@@ -38,7 +38,7 @@
 						<a>Ferreteria Escoinfer Escobillas</a>
 					</li>
 	                <li>
-	                    <a id="inicio" href="index_user.html" >Inicio</a>
+	                    <a id="inicio" href="index_user.php" >Inicio</a>
 	                </li>
 	                <li>
 	                    <a href="menu.html" >Productos</a>
@@ -91,7 +91,7 @@
 	            <button type="submit" class="btn btn-primary text-center mb-4 w-100">Ingresar</button>
 	        </form>
 	    </div>
-	    <p class="text-center poppins-regular">¿No tienes cuenta? <a href="registration.html" class="font-weight-bold">Regístrate aquí</a></p>
+	    <p class="text-center poppins-regular">¿No tienes cuenta? <a href="registration_usuario.php" class="font-weight-bold">Regístrate aquí</a></p>
 	</section>
 
 	<!-- Footer -->
